tests/sumo/errors/end_negative/errors.sumo
Error: The end time should be after the begin time.
Quitting (on error).
